--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 cassini = "^0.2.1"
+semantic-version = "^2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
+mypy = "^1.5.1"
+
 
 [build-system]
 requires = ["poetry-core"]
